# bookly-fastapi

./: docker-compose.development.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 47509e1d1dba_add_password_hash_in_usermodel.py  534f31bdac4e_add_tag_model_and_relationship.py  5f8fe961dd33_add_role_to_users.py  627e4665375b_init.py  924212318a7a_relate_users_to_books.py  e9476d1b117f_add_review_table.py  fd48b88014df_init.py
scripts/: start_worker.sh  start_worker_ui.sh
src/: __init__.py  config.py  exceptions.py  mail.py  middlewares.py  worker.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  services.py  utils.py
src/books/: models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  schemas.py  service.py
src/tests/: conftest.py  test_auth.py
