[project]
name = "bookly-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "greenlet>=3.3.2",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
]
