[project]
name = "bookly-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anyio>=4.12.1",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.135.1",
    "flower>=2.0.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "redis>=6.4.0",
    "sqlmodel>=0.0.37",
]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:.*U.*mode is deprecated:DeprecationWarning',
]
